--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "audio-streaming",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "./src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon -w ./src/server.js"
   },
   "repository": {
     "type": "git",
@@ -20,7 +20,10 @@
   "homepage": "https://github.com/kaueludovico/Audio-Streaming#readme",
   "dependencies": {
     "body-parser": "^1.15.2",
-    "express": "^4.17.1",
     "multer": "^1.4.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2",
+    "express": "^4.17.1"
   }
 }
